--- a/index.html
+++ b/index.html
@@ -121,8 +121,54 @@ across numerous natural sequences.
 <h2>Publications</h2>
 
 <table border="0">
+
 	<tr>
-			<td valign="top" width="200"><img src="" width="200"></td>
+		<td valign="top" width="250"><img src="projects/nips20/r11.png" width="200"></td>
+		<td valign="top" width="600">
+		<p>
+		<papertitle>SDF-SRN: Learning Signed Distance 3D Object Reconstruction from Static Images</papertitle>
+		<br>
+		Chen-Hsuan Lin, Chaoyang Wang, Simon Lucey
+		<br>
+		NeurIPS 2020
+		<strong>[
+		coming soon!
+		]
+	</strong>
+	</p>
+	<!-- First, we demonstrate that there is a theoretical relationship between siamese regression networks like GOTURN and the classical Inverse Compositional Lucas & Kanade (IC-LK) algorithm.
+	Further, we demonstrate that unlike GOTURN IC-LK adapts its regressor to the appearance of the current tracked frame.
+	Second, we propose a novel framework for object tracking inspired by the IC-LK framework, which we refer to as Deep-LK.
+	Finally, we show impressive results demonstrating that, with end-to-end learned features, Deep-LK substantially outperforms GOTURN and demonstrates comparable tracking performance against current state-of-the-art deep trackers on high frame-rate sequences whilst being an order of magnitude (100 FPS) computationally efficient.</p> -->
+		</td>
+	</tr>
+
+
+<table border="0">
+
+	<tr>
+		<td valign="top" width="250"><img src="" width="200"></td>
+		<td valign="top" width="600">
+		<p>
+		<papertitle>Deep NRSfM++: Towards Unsupervised 2D-3D Lifting in the Wild</papertitle>
+		<br>
+		Chaoyang Wang, Chen-Hsuan Lin, Simon Lucey
+		<br>
+		3DV 2020 (oral)
+		<strong>[
+		coming soon!
+		]
+	</strong>
+	</p>
+	<!-- First, we demonstrate that there is a theoretical relationship between siamese regression networks like GOTURN and the classical Inverse Compositional Lucas & Kanade (IC-LK) algorithm.
+	Further, we demonstrate that unlike GOTURN IC-LK adapts its regressor to the appearance of the current tracked frame.
+	Second, we propose a novel framework for object tracking inspired by the IC-LK framework, which we refer to as Deep-LK.
+	Finally, we show impressive results demonstrating that, with end-to-end learned features, Deep-LK substantially outperforms GOTURN and demonstrates comparable tracking performance against current state-of-the-art deep trackers on high frame-rate sequences whilst being an order of magnitude (100 FPS) computationally efficient.</p> -->
+		</td>
+	</tr>
+
+	<tr>
+			<td valign="top" width="250"><img src="" width="200"></td>
 			<td valign="top" width="600">
 			<p>
 			<papertitle>Distill Knowledge from NRSfM for Weakly Supervised 3D Pose Learning</papertitle>
@@ -144,7 +190,7 @@ across numerous natural sequences.
 	</tr>
 
 	<tr>
-			<td valign="top" width="200"><img src="" width="200"></td>
+			<td valign="top" width="250"><img src="" width="200"></td>
 			<td valign="top" width="600">
 			<p>
 			<papertitle>Web Stereo Video Supervision for Depth Prediction from Dynamic Scenes</papertitle>
@@ -164,30 +210,9 @@ across numerous natural sequences.
 			</td>
 	</tr>
 
-	<tr>
-		<td valign="top" width="200"><img src="" width="200"></td>
-		<td valign="top" width="600">
-		<p>
-		<papertitle>Deep Convolutional Compressed Sensing for LiDAR Depth Completion</papertitle>
-		<br>
-		Nathaniel Chodosh, Chaoyang Wang, Simon Lucey<br>
-		ACCV 2018
-		<strong>[
-		<a href="http://www.ci2cv.net/media/papers/nate_accv_2018.pdf">PDF</a>,
-		<a href="https://github.com/nchodosh/Super-LiDAR">code</a>
-		]
-	</strong>
-	</p>
-	<!-- First, we demonstrate that there is a theoretical relationship between siamese regression networks like GOTURN and the classical Inverse Compositional Lucas & Kanade (IC-LK) algorithm.
-	Further, we demonstrate that unlike GOTURN IC-LK adapts its regressor to the appearance of the current tracked frame.
-	Second, we propose a novel framework for object tracking inspired by the IC-LK framework, which we refer to as Deep-LK.
-	Finally, we show impressive results demonstrating that, with end-to-end learned features, Deep-LK substantially outperforms GOTURN and demonstrates comparable tracking performance against current state-of-the-art deep trackers on high frame-rate sequences whilst being an order of magnitude (100 FPS) computationally efficient.</p> -->
-		</td>
-	</tr>
-
 
 	<tr>
-		<td valign="top" width="200"><img src="projects/cvpr18_chaoyang/img2.png" width="150"></td>
+		<td valign="top" width="250"><img src="projects/cvpr18_chaoyang/img2.png" width="200"></td>
 		<td valign="top" width="600">
 		<p>
 		<papertitle>Learning Depth from Monocular Videos using Direct Methods</papertitle>
@@ -218,7 +243,30 @@ across numerous natural sequences.
 	</tr>
 
 	<tr>
-		<td valign="top" width="200"><img src="projects/icra18/img2.png" width="150"></td>
+		<td valign="top" width="250"><img src="" width="200"></td>
+		<td valign="top" width="600">
+		<p>
+		<papertitle>Deep Convolutional Compressed Sensing for LiDAR Depth Completion</papertitle>
+		<br>
+		Nathaniel Chodosh, Chaoyang Wang, Simon Lucey<br>
+		ACCV 2018
+		<strong>[
+		<a href="http://www.ci2cv.net/media/papers/nate_accv_2018.pdf">PDF</a>,
+		<a href="https://github.com/nchodosh/Super-LiDAR">code</a>
+		]
+	</strong>
+	</p>
+	<!-- First, we demonstrate that there is a theoretical relationship between siamese regression networks like GOTURN and the classical Inverse Compositional Lucas & Kanade (IC-LK) algorithm.
+	Further, we demonstrate that unlike GOTURN IC-LK adapts its regressor to the appearance of the current tracked frame.
+	Second, we propose a novel framework for object tracking inspired by the IC-LK framework, which we refer to as Deep-LK.
+	Finally, we show impressive results demonstrating that, with end-to-end learned features, Deep-LK substantially outperforms GOTURN and demonstrates comparable tracking performance against current state-of-the-art deep trackers on high frame-rate sequences whilst being an order of magnitude (100 FPS) computationally efficient.</p> -->
+		</td>
+	</tr>
+
+
+
+	<tr>
+		<td valign="top" width="250"><img src="projects/icra18/img2.png" width="200"></td>
 		<td valign="top" width="600">
 		<p>
 		<papertitle>Deep-LK for Efficient Adaptive Object Tracking</papertitle>
@@ -240,7 +288,7 @@ across numerous natural sequences.
 	</tr>
 
 <tr>
-	<td valign="top" width="200"><img src="projects/wacv18/img.png" width="150"></td>
+	<td valign="top" width="250"><img src="" width="200"></td>
 	<td valign="top" width="600">
 	<p>
 	<papertitle>Object-Centric Photometric Bundle Adjustment with Deep Shape Prior</papertitle>
@@ -257,7 +305,7 @@ across numerous natural sequences.
 </tr>
 <!--cur project1-->
 <tr>
-	<td valign="top" width="200"><img src="projects/iccv17/iccv17.png" width="150"></td>
+	<td valign="top" width="250"><img src="projects/iccv17/iccv17.png" width="200"></td>
 	<td valign="top" width="600">
 	<p>
 	<papertitle>Rethinking Reprojection: Closing the Loop for Pose-aware Shape Reconstruction from a Single Image</papertitle>
@@ -274,7 +322,7 @@ across numerous natural sequences.
 
 <!--cur project1-->
 <tr>
-	<td valign="top" width="200"><img src="projects/objprop/img.png" width="150"></td>
+	<td valign="top" width="250"><img src="" width="200"></td>
 	<td valign="top" width="600">
 	<p>
 	<papertitle>Object Proposal by Multi-branched Hierarchical Segmentation</papertitle>
@@ -290,7 +338,7 @@ across numerous natural sequences.
 </tr>
 <!--project 2 -->
 <tr>
-	<td valign="top" width="200"><img src="projects/bpstereo/img1.png" width="150"></td>
+	<td valign="top" width="250"><img src="projects/bpstereo/img1.png" width="200"></td>
 	<td valign="top" width="600">
 	<p>
 	<papertitle>Binocular Photometric Stereo Acquisition and Reconstruction for 3D Talking Head Applications</papertitle>
@@ -353,7 +401,7 @@ training.[<a href="projects/708/pgm_project_final.pdf">PDF</a>]</p> </td>
 </table> -->
 
 <hr>
-<i>Last modified by Wang Chaoyang, 2019-08-27.</i>
+<i>Last modified by Wang Chaoyang, 2020-10-12.</i>
 
 <!-- <hr>
 <table border="0">
