--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ name {
 					<br>
 					I'm a current member of <a href="http://www.ci2cv.net/">CI2CV Lab</a> led by Prof. Simon Lucey.
 					Prior to CMU, I obtained my B.E. and M.S. degree from Shanghai Jiao Tong University, supervised by <a href="https://scholar.google.com/citations?user=1smFmxAAAAAJ&hl=en">Prof. Liqing Zhang</a>.
-					I've collaborated with <a href="http://www.oliverwang.info/">Oliver Wang</a> and <a href="https://fperazzi.github.io/">Federico Perazzi</a> at Adobe Inc.
+					I've collaborated with <a href="https://oraziogallo.github.io/">Orazio Gallo</a>, Ben Eckart at Nvidia, <a href="http://www.oliverwang.info/">Oliver Wang</a> and <a href="https://fperazzi.github.io/">Federico Perazzi</a> at Adobe Inc.
 						<a href="https://yichenwei.github.io">Yichen Wei</a>, <a href="https://www.microsoft.com/en-us/research/people/lijuanw/">Lijuan Wang</a>,
 						<a href="http://www-infobiz.ist.osaka-u.ac.jp/en/member/matsushita/">Yasuyuki Matsushita</a>, 
 						<a href="https://www.microsoft.com/en-us/research/people/frankkps/">Frank K. Soong</a> at Microsoft Research Asia.
@@ -120,6 +120,49 @@ across numerous natural sequences.
 
 <h2>Publications</h2>
 
+
+
+	<table border="0">
+
+		<tr>
+			<td valign="top" width="250">		
+			<video width="250" autoplay loop muted>
+				<source src="projects/ntp/Balloon1-2_traj_dy_pcd.mp4" type="video/mp4" /></td>
+			<td valign="top" width="600">
+			<p>
+			<papertitle>Neural Trajectory Fields for Dynamic Novel View Synthesis</papertitle>
+			<br>
+			Chaoyang Wang, Ben Eckart, Simon Lucey, Orazio Gallo
+			<br>
+			 2021
+		<strong>[
+			<a href="https://arxiv.org/pdf/2105.05994.pdf">arxiv</a>
+			]
+		</strong>
+		</p>
+			</td>
+		</tr>
+	
+<table border="0">
+
+	<tr>
+		<td valign="top" width="250"><img src="" width="200"></td>
+		<td valign="top" width="600">
+		<p>
+		<papertitle>PAUL: Procrustean Autoencoder for Unsupervised Lifting</papertitle>
+		<br>
+		Chaoyang Wang, Simon Lucey
+		<br>
+		CVPR 2021
+	<strong>[
+		<a href="https://arxiv.org/pdf/2103.16773.pdf">arxiv</a>
+		]
+	</strong>
+	</p>
+		</td>
+	</tr>
+
+
 <table border="0">
 
 	<tr>
@@ -132,7 +175,8 @@ across numerous natural sequences.
 		<br>
 		NeurIPS 2020
 		<strong>[
-		coming soon!
+		<a href="https://arxiv.org/abs/2010.10505">arxiv</a>,
+		<a href="https://chenhsuanlin.bitbucket.io/signed-distance-SRN">project</a>
 		]
 	</strong>
 	</p>
@@ -145,7 +189,6 @@ across numerous natural sequences.
 
 
 <table border="0">
-
 	<tr>
 		<td valign="top" width="250"><img src="" width="200"></td>
 		<td valign="top" width="600">
@@ -156,7 +199,7 @@ across numerous natural sequences.
 		<br>
 		3DV 2020 (oral)
 		<strong>[
-		coming soon!
+			<a href="https://arxiv.org/pdf/2001.10090.pdf">arxiv</a>
 		]
 	</strong>
 	</p>
@@ -190,7 +233,7 @@ across numerous natural sequences.
 	</tr>
 
 	<tr>
-			<td valign="top" width="250"><img src="" width="200"></td>
+			<td valign="top" width="250"><img src="projects/wsvd/teaser.png" width="200"></td>
 			<td valign="top" width="600">
 			<p>
 			<papertitle>Web Stereo Video Supervision for Depth Prediction from Dynamic Scenes</papertitle>
@@ -401,7 +444,7 @@ training.[<a href="projects/708/pgm_project_final.pdf">PDF</a>]</p> </td>
 </table> -->
 
 <hr>
-<i>Last modified by Wang Chaoyang, 2020-10-12.</i>
+<i>Last modified by Wang Chaoyang, 2021-12-10.</i>
 
 <!-- <hr>
 <table border="0">
