--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@ name {
 </style>
 </head>
 
+<center>
 <body leftmargin = "50">
+<center>
 <table border="0">
 	<tr>
 		<td width="200">
@@ -68,6 +70,7 @@ name {
 		</td>
 	</tr>
 </table>
+</center>
 
 <!-- <hr>
 <h2>Recent Works</h2>
@@ -118,6 +121,7 @@ across numerous natural sequences.
 </table> -->
 <hr>
 
+
 <h2>Publications</h2>
 
 
@@ -125,10 +129,27 @@ across numerous natural sequences.
 	<table border="0">
 
 		<tr>
-			<td valign="top" width="250">		
-			<video width="250" autoplay loop muted>
-				<source src="projects/ntp/Balloon1-2_traj_dy_pcd.mp4" type="video/mp4" /></td>
+			<td valign="top" width="250">	
+			<img src="projects/cvpr22/b1c_ntp.gif" width="110">	
+			<img src="projects/cvpr22/6db_ntp.gif" width="110">	
+			<video width="200" autoplay loop muted>
+				<source src="projects/ntp/balloon_teaser.mp4" type="video/mp4" />
+			</video>
+			</td>
+
 			<td valign="top" width="600">
+			<p>
+				<papertitle>Neural Priors for Trajectory Estimation</papertitle>
+				<br>
+				Chaoyang Wang, Xueqian Li,  Jhony Kaesemodel Pontes, Simon Lucey
+				<br>
+				CVPR 2022
+				<strong>[
+					<a href="projects/cvpr22/supplementary/supp.html">supp</a>
+					]
+				</strong>
+			</p>
+
 			<p>
 			<papertitle>Neural Trajectory Fields for Dynamic Novel View Synthesis</papertitle>
 			<br>
@@ -146,7 +167,7 @@ across numerous natural sequences.
 <table border="0">
 
 	<tr>
-		<td valign="top" width="250"><img src="" width="200"></td>
+		<td valign="top" width="250"><img src="projects/cvpr21/paul_teaser.gif" width="200"></td>
 		<td valign="top" width="600">
 		<p>
 		<papertitle>PAUL: Procrustean Autoencoder for Unsupervised Lifting</papertitle>
@@ -211,7 +232,7 @@ across numerous natural sequences.
 	</tr>
 
 	<tr>
-			<td valign="top" width="250"><img src="" width="200"></td>
+			<td valign="top" width="250"><img src="projects/iccv19/iccv19-teaser.png" width="200"></td>
 			<td valign="top" width="600">
 			<p>
 			<papertitle>Distill Knowledge from NRSfM for Weakly Supervised 3D Pose Learning</papertitle>
@@ -221,7 +242,7 @@ across numerous natural sequences.
 			ICCV 2019
 			<strong>[
 			<a href="https://arxiv.org/pdf/1908.06377.pdf">arxiv</a>,
-			<a href="https://mightychaos.github.io/">code coming</a>
+			<a href="https://mightychaos.github.io/"> project </a>
 			]
 		</strong>
 		</p>
@@ -454,4 +475,5 @@ training.[<a href="projects/708/pgm_project_final.pdf">PDF</a>]</p> </td>
 </table> -->
 
 </body>
+</center>
 </html>
