--- a/index.html
+++ b/index.html
@@ -183,6 +183,25 @@ across numerous natural sequences.
 		</td>
 	</tr>
 
+<table border="0">
+
+	<tr>
+		<td valign="top" width="250"><img src="" width="200"></td>
+		<td valign="top" width="600">
+		<p>
+		<papertitle>High Fidelity 3D Reconstructions with Limited Physical Views</papertitle>
+		<br>
+		Mosam Dabhi, Chaoyang Wang, Kunal Saluja, Laszlo Jeni, Ian Fasel, Simon Lucey
+		<br>
+		3DV 2021
+	<strong>[
+		<a href="https://arxiv.org/pdf/2110.11599.pdf">arxiv</a>,
+		<a href="https://sites.google.com/view/high-fidelity-3d-neural-prior">project</a>
+		]
+	</strong>
+	</p>
+		</td>
+	</tr>
 
 <table border="0">
 
@@ -285,7 +304,7 @@ across numerous natural sequences.
 			CVPR 2018
 		<strong>[
 		<a href="http://openaccess.thecvf.com/content_cvpr_2018/papers/Wang_Learning_Depth_From_CVPR_2018_paper.pdf">PDF</a>,
-	  <strong><a href="https://github.com/MightyChaos/LKVOLearner">code&result</a>
+	  <strong><a href="https://github.com/MightyChaos/LKVOLearner">project</a>
 		]
 		</p>
 	<!-- </strong><br />
