--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ across numerous natural sequences.
 
 <table border="0">
 	<tr>
-		<td valign="top" width="250"><img src="" width="200"></td>
+		<td valign="top" width="250"><img src="projects/3dv20/deepnrsfmpp.jpg" width="200"></td>
 		<td valign="top" width="600">
 		<p>
 		<papertitle>Deep NRSfM++: Towards Unsupervised 2D-3D Lifting in the Wild</papertitle>
@@ -326,7 +326,7 @@ across numerous natural sequences.
 	</tr>
 
 	<tr>
-		<td valign="top" width="250"><img src="" width="200"></td>
+		<td valign="top" width="250"><img src="projects/accv18/teaser.jpg" width="200"></td>
 		<td valign="top" width="600">
 		<p>
 		<papertitle>Deep Convolutional Compressed Sensing for LiDAR Depth Completion</papertitle>
