--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@ training.[<a href="projects/708/pgm_project_final.pdf">PDF</a>]</p> </td>
 
 <hr>
 <i>Last modified by Wang Chaoyang, 2021-12-10.</i>
-
+<div style="display:none"><a href='ri_thesis_poposal.pdf'><!-- nothing --></a></div>
 <!-- <hr>
 <table border="0">
 <tr>
