--- a/projects/fsdnerf/index.html
+++ b/projects/fsdnerf/index.html
@@ -26,19 +26,45 @@
 	<center>
 		<span style="font-size:36px">Flow Supervision for Deformable NeRF</span>
         <br>
-        <span style="font-size:36px">Supplementary Material</span>
-		<table align=center width=600px>
-			<table align=center width=600px>
+        <!-- <span style="font-size:36px">Supplementary Material</span> -->
+		<table align=center width=700px>
 				<tr>
 					<td align=center width=100px>
 						<center>
-							<span style="font-size:24px">Paper ID: 8265</span>
+							<span style="font-size:20px">Chaoyang Wang</span>
+						</center>
+					</td>
+					<td align=center width=200px>
+						<center>
+							<span style="font-size:20px">Lachlan Ewen MacDonald</span>
+						</center>
+					</td>
+					<td align=center width=100px>
+						<center>
+							<span style="font-size:20px">Laszlo A. Jeni</span>
+						</center>
+					</td>
+					<td align=center width=100px>
+						<center>
+							<span style="font-size:20px">Simon Lucey</span>
 						</center>
 					</td>
 				</tr>
-			</table>
 		</table>
+		<table align=center width=400px>
+			<tr>
+				<td align=center width=100px>
+					<a href=""><img src="icons/arxiv.jpeg" style='width:80px'/></a>
+				</td>
+				<td align=center width=100px>
+					<a href=""><img src="icons/GitHub-logo.png" style='width:80px'/></a>
+				</td>
+			</tr>
+		</table>
+		
 	</center>
+
+
 
     <br>
 	<hr>
@@ -58,7 +84,7 @@
         <br>
         <tr>
             <th style='font-size: 22px'>Ours</th>
-            <th style='font-size: 22px'>Nefies [<a href=#cite_nerfies id='ref_nerfies'>2</a>]</th>
+            <th style='font-size: 22px'>Nerfies [<a href=#cite_nerfies id='ref_nerfies'>2</a>]</th>
             <th style='font-size: 22px'>HyperNeRF [<a href=#cite_hypernerf id='ref_hypernerf'>3</a>]</th>
             <th style='font-size: 22px'>NSFF [<a href=#cite_nsff id='ref_nsff'>4</a>]</th>
         </tr>
@@ -222,11 +248,11 @@
 			<td width=400px>
 				<left>
 					<center><h1>Reference</h1></center>
-                    <div>[<a href=#ref_nv id='cite_nv'>1</a>] Yoon, Jae Shin, et al. "Novel view synthesis of dynamic scenes with globally coherent depths from a monocular camera." Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition. 2020.</div>
-					<div>[<a href=#ref_nerfies id='cite_nerfies'>2</a>] Park, Keunhong, et al. "Nerfies: Deformable neural radiance fields." Proceedings of the IEEE/CVF International Conference on Computer Vision. 2021.</div>
-                    <div>[<a href=#ref_hypernerf id='cite_hypernerf'>3</a>] Park, K., Sinha, U., Hedman, P., Barron, J. T., Bouaziz, S., Goldman, D. B., ... & Seitz, S. M. (2021). Hypernerf: A higher-dimensional representation for topologically varying neural radiance fields. arXiv preprint arXiv:2106.13228.</div>
-                    <div>[<a href=#ref_nsff id='cite_nsff'>4</a>] Li, Zhengqi, et al. "Neural scene flow fields for space-time view synthesis of dynamic scenes." Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition. 2021.</div>
-                    <div>[<a href=#ref_dycheck id='cite_dycheck'>5</a>] Gao, Hang, et al. "Monocular dynamic view synthesis: A reality check." arXiv preprint arXiv:2210.13445 (2022).</div>
+                    <div>[<a href=#ref_nv id='cite_nv'>1</a>] Yoon, Jae Shin, et al. "Novel view synthesis of dynamic scenes with globally coherent depths from a monocular camera." CVPR 2020.</div>
+					<div>[<a href=#ref_nerfies id='cite_nerfies'>2</a>] Park, Keunhong, et al. "Nerfies: Deformable neural radiance fields." CVPR 2021.</div>
+                    <div>[<a href=#ref_hypernerf id='cite_hypernerf'>3</a>] Park Keunhong, et al. "Hypernerf: A higher-dimensional representation for topologically varying neural radiance fields." SIGGRAPH 2021.</div>
+                    <div>[<a href=#ref_nsff id='cite_nsff'>4</a>] Li, Zhengqi, et al. "Neural scene flow fields for space-time view synthesis of dynamic scenes." CVPR 2021.</div>
+                    <div>[<a href=#ref_dycheck id='cite_dycheck'>5</a>] Gao, Hang, et al. "Monocular dynamic view synthesis: A reality check." NeurIPS 2022.</div>
 				</left>
 			</td>
 		</tr>
