--- a/index.html
+++ b/index.html
@@ -129,6 +129,46 @@ across numerous natural sequences.
 	<table border="0">
 
 		<tr>
+			<td valign="middle" width="250"><img src="projects/fsdnerf/resources/illu.png" width="200"></td>
+			<td valign="middle" width="600">
+			<p>
+			<papertitle>Flow Supervison for Deformable NeRF</papertitle>
+			<br>
+			Chaoyang Wang, Lachlan E. MacDonald, Laszlo A. Jeni, Simon Lucey
+			<br>
+			CVPR 2023 (Highlight)
+		<strong>[
+			<a href="projects/fsdnerf/index.html">project</a>
+			]
+		</strong>
+		</p>
+			</td>
+		</tr>
+	
+		<tr>
+			<td valign="middle" width="200">
+				<video autoplay muted width="200">
+					<source src="https://gengshan-y.github.io/images/rac.mp4"  type="video/mp4">
+				</video>
+			</td>
+			<td valign="middle" width="600">
+			<p>
+			<papertitle>RAC: Reconstructing Animatable Categories from Videos</papertitle>
+			<br>
+			Gengshan Yang, Chaoyang Wang, N dinesh reddy, Deva Ramanan
+			<br>
+			CVPR 2023
+		<strong>[
+			<a href="https://gengshan-y.github.io/rac-www/">project</a>
+			]
+		</strong>
+		</p>
+			</td>
+		</tr>
+
+	<table border="0">
+
+		<tr>
 			<td valign="top" width="250">	
 			<img src="projects/cvpr22/b1c_ntp.gif" width="110">	
 			<img src="projects/cvpr22/6db_ntp.gif" width="110">	
