--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ across numerous natural sequences.
 	
 		<tr>
 			<td valign="middle" width="200">
-				<video autoplay muted width="200">
+				<video autoplay muted loop width="200">
 					<source src="https://gengshan-y.github.io/images/rac.mp4"  type="video/mp4">
 				</video>
 			</td>
@@ -169,9 +169,9 @@ across numerous natural sequences.
 	<table border="0">
 
 		<tr>
-			<td valign="top" width="250">	
-			<img src="projects/cvpr22/b1c_ntp.gif" width="110">	
-			<img src="projects/cvpr22/6db_ntp.gif" width="110">	
+			<td valign="topleft" width="250">	
+					<img src="projects/cvpr22/b1c_ntp.gif" width="110">	
+					<img src="projects/cvpr22/6db_ntp.gif" width="110">	
 			<video width="200" autoplay loop muted>
 				<source src="projects/ntp/balloon_teaser.mp4" type="video/mp4" />
 			</video>
