--- a/projects/fsdnerf/index.html
+++ b/projects/fsdnerf/index.html
@@ -54,7 +54,7 @@
 		<table align=center width=400px>
 			<tr>
 				<td align=center width=100px>
-					<a href=""><img src="icons/arxiv.jpeg" style='width:80px'/></a>
+					<a href="https://arxiv.org/pdf/2303.16333.pdf"><img src="icons/arxiv.jpeg" style='width:80px'/></a>
 				</td>
 				<td align=center width=100px>
 					<a href=""><img src="icons/GitHub-logo.png" style='width:80px'/></a>
