--- a/projects/fsdnerf/index.html
+++ b/projects/fsdnerf/index.html
@@ -5,9 +5,9 @@
 <html>
 <head>
 	<title>Flow Supervision for Deformable NeRF</title>
-	<meta property="og:image" content="Path to my teaser.png"/> <!-- Facebook automatically scrapes this. Go to https://developers.facebook.com/tools/debug/ if you update and want to force Facebook to rescrape. -->
-	<meta property="og:title" content="Creative and Descriptive Paper Title." />
-	<meta property="og:description" content="Paper description." />
+	<meta property="og:image" content="resources/illu.png/> <!-- Facebook automatically scrapes this. Go to https://developers.facebook.com/tools/debug/ if you update and want to force Facebook to rescrape. -->
+	<meta property="og:title" content="Flow Supervision for Deformable NeRF." />
+	<meta property="og:description" content="This paper discuss how to estimate 3D scene flows from the deformation field used in Deformable NeRF. We derived an analytical equation to calculate the flows without inverting the deformation field. We show applying flow supervion is helpful to improve reconstruction for fast moving objects." />
 
 	<!-- Get from Google Analytics -->
 	<!-- Global site tag (gtag.js) - Google Analytics -->
