--- a/projects/fsdnerf/index.html
+++ b/projects/fsdnerf/index.html
@@ -156,7 +156,7 @@
             Deformable neural radiance fields (e.g. <a href="https://nerfies.github.io/">Nerfies</a> , <a href="https://hypernerf.github.io/">HyperNeRF</a>, <a href="https://www.albertpumarola.com/research/D-NeRF/index.html">D-NeRF</a>, <a href="https://gvv.mpi-inf.mpg.de/projects/nonrigid_nerf/">NR-NeRF</a> ) has been a notable technique to represent dynamic scenes and shows plausible space-time view synthesis results. However, the current implementations only warrant success on teleporting-like videos whose camera motions are significantly more rapid than object motions. Quality of their results significantly decrease on videos with more rapid object motions [4]. For example, in the "broom" example above, both Nefies and HyperNeRF show significant artifacts when trained only using a single camera (i.e. the left camera from the stereo camera rig), as oppose to teleporting between the left and right cameras in the original paper of Nerfies.
           </p>
           <p>
-            In this work, we conjecture the deficiency of these deformable NeRF-based methods is mainly due to lack of temporal regularization. The community has explored optical flow as an additional cue to help supervise the temporal transitions of other motion representations, such as scene flow fields [<a href=#cite_nsff id='ref_nsff'>4</a>]  and blend skinning fields. However, enforcing flow constraints with respect to a generic backward deformation field as in Nerfies is non-trivial. We propose an elegant solution to enforce flow constraints for deformable NeRFs, without inverting the backward deformation function.
+            In this work, we conjecture the deficiency of these deformable NeRF-based methods is mainly due to lack of temporal regularization. The community has explored optical flow as an additional cue to help supervise the temporal transitions of other motion representations, such as scene flow fields and blend skinning fields. However, enforcing flow constraints with respect to a generic backward deformation field as in Nerfies is non-trivial. We propose an elegant solution to enforce flow constraints for deformable NeRFs, without inverting the backward deformation function.
             Our method produces plausible view synthesis result, as well as accurate depth map and motions.
           </p>
         </div>
@@ -197,8 +197,10 @@
         <div class="column is-four-fifths">
           <h2 class="title is-3">Video</h2>
           <div class="publication-video">
-            <iframe src="https://www.youtube.com/watch?v=-fCMDXOjg-o&t=2s"
+            <iframe src="https://www.youtube.com/embed/-fCMDXOjg-o"
                     frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <!-- <iframe src="https://www.youtube.com/watch?v=-fCMDXOjg-o&t=2s"
+                    frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> -->
           </div>
         </div>
       </div>
