--- a/index.html
+++ b/index.html
@@ -52,17 +52,16 @@ name {
 			</tr>
 			<tr>
 				<!-- <ul style="list-style-type:none"> -->
-					<p>Phd student of <a href="https://www.ri.cmu.edu/", target="_blank"> Robotics Institute of Carnegie Mellon University</a>.
-					<br>
-					I'm a current member of <a href="http://www.ci2cv.net/">CI2CV Lab</a> led by Prof. Simon Lucey.
-					Prior to CMU, I obtained my B.E. and M.S. degree from Shanghai Jiao Tong University, supervised by <a href="https://scholar.google.com/citations?user=1smFmxAAAAAJ&hl=en">Prof. Liqing Zhang</a>.
+					<p>I am a research scientist at <a href="https://research.snap.com/team/category/creative-vision.html">Snap Creative Vision Team</a>, leading research in 4D reconstruction and generation.</p>
+					<p>
+					I obtained my PhD degree from Robotics Institute of CMU, and was a member of <a href="http://www.ci2cv.net/">CI2CV Lab</a> led by Prof. Simon Lucey. Prior to CMU, I obtained my B.E. and M.S. degree from Shanghai Jiao Tong University.
+					<!-- Prior to CMU, I obtained my B.E. and M.S. degree from Shanghai Jiao Tong University,  supervised by <a href="https://scholar.google.com/citations?user=1smFmxAAAAAJ&hl=en">Prof. Liqing Zhang</a>.
 					I've collaborated with <a href="https://oraziogallo.github.io/">Orazio Gallo</a>, Ben Eckart at Nvidia, <a href="http://www.oliverwang.info/">Oliver Wang</a> and <a href="https://fperazzi.github.io/">Federico Perazzi</a> at Adobe Inc.
 						<a href="https://yichenwei.github.io">Yichen Wei</a>, <a href="https://www.microsoft.com/en-us/research/people/lijuanw/">Lijuan Wang</a>,
 						<a href="http://www-infobiz.ist.osaka-u.ac.jp/en/member/matsushita/">Yasuyuki Matsushita</a>, 
-						<a href="https://www.microsoft.com/en-us/research/people/frankkps/">Frank K. Soong</a> at Microsoft Research Asia.
-					<p>Research interest: computer vision, machine learning.
-					<br>
-					Contact: chaoyanw[at]andrew.cmu.edu</p>
+						<a href="https://www.microsoft.com/en-us/research/people/frankkps/">Frank K. Soong</a> at Microsoft Research Asia. -->
+					</p>
+					<p>If you are interested in collaboration or looking for research internship position, feel free to shoot me an email at cwang9[at]snapchat.com</p>
 					<!-- <li><strong><a href="cv.pdf">resume</a></strong></li> -->
 				<!-- </ul> -->
 			</tr>
@@ -122,11 +121,97 @@ across numerous natural sequences.
 <hr>
 
 
-<h2>Publications</h2>
+<h2>Selected Publications & Manuscripts</h2>
 
 
 
 	<table border="0">
+		<tr>
+			<td valign="middle" width="200">
+				<video autoplay muted loop width="200">
+					<source src="https://snap-research.github.io/4Real/resources/goodvideos_144/repo_0508_debug_multiview_video17_Frm000_10.mp4"  type="video/mp4">
+				</video>
+			</td>
+			<td valign="middle" width="600">
+			<p>
+			<papertitle>4Real: Towards Photorealistic 4D Scene Generation via Video Diffusion Models</papertitle>
+			<br>
+			Heng Yu<sup>*</sup>, Chaoyang Wang<sup>*</sup>, Peiye Zhuang, Willi Menapace, Aliaksandr Siarohin, Junli Cao, László A. Jeni, Sergey Tulyakov, Hsin-Ying Lee
+			<br>
+			in Submission
+		<strong>[
+			<a href="https://snap-research.github.io/4Real/">project</a>
+			]
+		</strong>
+		</p>
+			</td>
+		</tr>
+
+		<tr>
+			<td valign="middle" width="200">
+				<video autoplay muted loop width="200">
+					<source src="https://snap-research.github.io/GTR/GTR_files/syn.mp4"  type="video/mp4">
+				</video>
+			</td>
+			<td valign="middle" width="600">
+			<p>
+			<papertitle>GTR: Improving Large 3D Reconstruction Models through Geometry and Texture Refinement</papertitle>
+			<br>
+			Peiye Zhuang, Songfang Han,  Chaoyang Wang, Aliaksandr Siarohin, Jiaxu Zou, Michael Vasilkovsky,
+			Vladislav Shakhrai, Sergey Korolev, Sergey Tulyakov, Hsin-Ying Lee
+			<br>
+			in Submission
+		<strong>[
+			<a href="https://snap-research.github.io/GTR/">project</a>
+			]
+		</strong>
+		</p>
+			</td>
+		</tr>
+
+		<tr>
+			<td valign="middle" width="200">
+				<video autoplay muted loop width="200">
+					<source src="https://zqh0253.github.io/SceneWiz3D/media/diverse/9.mp4"  type="video/mp4">
+				</video>
+			</td>
+			<td valign="middle" width="600">
+			<p>
+			<papertitle>SceneWiz3D: Towards Text-guided 3D Scene Composition</papertitle>
+			<br>
+			Qihang Zhang, Chaoyang Wang, Aliaksandr Siarohin, Peiye Zhuang, Yinghao Xu, Ceyuan Yang, Dahua Lin, Bolei Zhou, Sergey Tulyakov, Hsin-Ying Lee
+			<br>
+			CVPR 2024
+		<strong>[
+			<a href="https://zqh0253.github.io/SceneWiz3D/">project</a>
+			]
+		</strong>
+		</p>
+			</td>
+		</tr>
+
+
+		<tr>
+			<td valign="middle" width="200">
+				<video autoplay muted loop width="200">
+					<source src="https://snap-research.github.io/3DVADER/media/obj_cond/output_4.mp4"  type="video/mp4">
+				</video>
+			</td>
+			<td valign="middle" width="600">
+			<p>
+			<papertitle>3D VADER - AutoDecoding Latent 3D Diffusion Models</papertitle>
+			<br>
+			Evangelos Ntavelis, Aliaksandr Siarohin, Kyle Olszewski, Chaoyang Wang, Luc Van Gool, Sergey Tulyakov
+			<br>
+			NeurIPS 2023
+		<strong>[
+			<a href="https://snap-research.github.io/3DVADER/">project</a>
+			]
+		</strong>
+		</p>
+			</td>
+		</tr>
+
 
 		<tr>
 			<td valign="middle" width="250"><img src="projects/fsdnerf/resources/illu.png" width="200"></td>
@@ -165,6 +250,7 @@ across numerous natural sequences.
 		</p>
 			</td>
 		</tr>
+	</table>
 
 	<table border="0">
 
@@ -203,7 +289,10 @@ across numerous natural sequences.
 		</p>
 			</td>
 		</tr>
-	
+	</table>
+
+	<h2>Older Publications</h2>
+
 <table border="0">
 
 	<tr>
@@ -223,7 +312,7 @@ across numerous natural sequences.
 		</td>
 	</tr>
 
-<table border="0">
+<!-- <table border="0">
 
 	<tr>
 		<td valign="top" width="250"><img src="" width="200"></td>
@@ -242,6 +331,7 @@ across numerous natural sequences.
 	</p>
 		</td>
 	</tr>
+</table> -->
 
 <table border="0">
 
@@ -410,7 +500,7 @@ across numerous natural sequences.
 		</td>
 	</tr>
 
-<tr>
+<!-- <tr>
 	<td valign="top" width="250"><img src="" width="200"></td>
 	<td valign="top" width="600">
 	<p>
@@ -425,7 +515,7 @@ across numerous natural sequences.
 	</strong>
 	</td>
 	</p>
-</tr>
+</tr> -->
 <!--cur project1-->
 <tr>
 	<td valign="top" width="250"><img src="projects/iccv17/iccv17.png" width="200"></td>
@@ -524,7 +614,7 @@ training.[<a href="projects/708/pgm_project_final.pdf">PDF</a>]</p> </td>
 </table> -->
 
 <hr>
-<i>Last modified by Wang Chaoyang, 2023-03-24.</i>
+<i>Last modified by Wang Chaoyang, 2024-06-20.</i>
 <div style="display:none"><a href='ri_thesis_poposal.pdf'><!-- nothing --></a></div>
 <!-- <hr>
 <table border="0">
