--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@ name {
 <center>
 <table border="0">
 	<tr>
-		<td width="200">
-		<img src="night_king.jpg" alt="Smiley face" height="150">
+		<td width="250">
+		<img src="night_king3.png" alt="Smiley face" width="200">
 		</td>
 		<td width="500">
 		<table border="0">
